# linear-algebra-rs

./: Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: deploy-prod.yml  rust.yml
src/: lib.rs  number.rs  prelude.rs  types.rs
src/circulant_matrix/: mod.rs  real.rs  teoplitz_matrix.rs
src/diagonalized/: mod.rs
src/lu_decomposed/: complex.rs  mod.rs  real.rs
src/macros/: mod.rs  stack.rs  sub_matrix.rs  zeros.rs
src/matrix/: mod.rs
src/matrix/bd/: mod.rs
src/matrix/ci/: evd.rs  gv.rs  mod.rs
src/matrix/ci/gv/: d.rs
src/matrix/di/: inv.rs  mod.rs  powf.rs  powi.rs
src/matrix/di/inv/: d.rs  z.rs
src/matrix/di/operators/: add.rs  index.rs  mod.rs  mul.rs  neg.rs  sub.rs
src/matrix/ge/: inv.rs  mm.rs  mod.rs  sv.rs  svd.rs  trf.rs  tri.rs  trs.rs
src/matrix/ge/inv/: d.rs  mod.rs  z.rs
src/matrix/ge/mm/: d.rs  z.rs
src/matrix/ge/operations/: adjoint.rs  dot.rs  mod.rs  prod.rs  t.rs  tr.rs
src/matrix/ge/operators/: add.rs  div.rs  index.rs  mod.rs  mul.rs  neg.rs  prod.rs  sub.rs  sum.rs
src/matrix/ge/or_un/: gtr.rs
src/matrix/ge/sv/: d.rs
src/matrix/ge/svd/: d.rs
src/matrix/ge/sy_he/: mod.rs  trd.rs  trf.rs  tri.rs  trs.rs
src/matrix/ge/tr/: det.rs  mod.rs
src/matrix/ge/trf/: d.rs  z.rs
src/matrix/gt/: mod.rs  trf.rs  trs.rs
src/matrix/kr/: mod.rs
src/matrix/operations/: adjoint.rs  diag.rs  identity.rs  mod.rs  prod.rs  product.rs  t.rs  tr.rs  trace.rs  transpose.rs  zeros.rs
src/matrix/operations/decomposition/: mod.rs
src/matrix/operations/det/: triangle.rs
src/matrix/operations/determinant/: triangle.rs
src/matrix/operators/: add.rs  index.rs  mod.rs  mul.rs  sub.rs
src/matrix/or/: gtr.rs
src/matrix/po/: inv.rs  mod.rs  sv.rs  trf.rs  tri.rs  trs.rs
src/matrix/pt/: mod.rs  trf.rs  trs.rs
src/matrix/sp/: index.rs  mod.rs  mul.rs  mul_lhs.rs  mul_rhs.rs
src/matrix/sp_hp/: mod.rs  trf.rs  tri.rs  trs.rs
src/matrix/ss/: mod.rs  mul.rs  mul_lhs.rs  mul_rhs.rs
src/matrix/st/: ev.rs  evd.rs  mod.rs
src/matrix/st_ht/: ev.rs
src/matrix/sy/: mod.rs  trd.rs
src/matrix/to/: mod.rs
src/matrix/tr/: det.rs
src/tensor/: matrix.rs  mod.rs
src/tensor/sparse/: mod.rs
src/toeplitz_matrix/: mod.rs
tests/: integration_test.rs
(+50 files in other folders)
