[package]
name = "opensrdk-linear-algebra"
version = "0.3.0"
authors = ["Kimura Yu <33382781+KimuraYu45z@users.noreply.github.com>"]
edition = "2018"
description = "Standard linear algebra library using blas and lapack for OpenSRDK toolchain."
repository = "https://github.com/OpenSRDK/linear-algebra-rs"
license = "Apache-2.0"
keywords = ["linear-algebra"]
categories = ["mathematics", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blas = "0.20"
lapack = "0.16"
rayon = "1.3.1"
num-complex = "0.3.0"
rustfft = "3.0.1"

[dev-dependencies]
openblas-src = "0.9"
