[package]
name = "opensrdk-linear-algebra"
version = "0.6.1"
authors = ["Kimura Yu <33382781+KimuraYu45z@users.noreply.github.com>"]
edition = "2018"
description = "Standard linear algebra library using blas and lapack for OpenSRDK toolchain."
repository = "https://github.com/OpenSRDK/linear-algebra-rs"
license = "Apache-2.0"
keywords = ["linear-algebra"]
categories = ["mathematics", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blas = "0.20"
lapack = "0.16"
rayon = "1.3.1"
rustfft = "3.0.1"
thiserror = "1.0.20"

[dev-dependencies]
blas-src = { version = "0.6", features = ["intel-mkl"] } 
lapack-src = { version = "0.6", features = ["intel-mkl"] }
